--- a/thymeleaf-select-option/src/main/resources/templates/index.html
+++ b/thymeleaf-select-option/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
   <head>
-    <title>Thymeleaf Drop Down Dependencies</title>
+    <title>Thymeleaf Drop Down List Dependencies</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
 
